--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="./favicon/favicon.ico" sizes="any">
     <link rel="manifest" href="./favicon/site.webmanifest">
     <link rel="stylesheet" href="./css/main.css">
-    <title>Tiktok Downloader - Download Tiktoks For Free No Watermark</title>
+    <title>Tikloaded Tiktok Downloader - Download Tiktoks For Free No Watermark</title>
 </head>
 
 <body class="bg-gray-100 dark:bg-neutral-900 w-screen h-screen">
@@ -40,7 +40,7 @@
             <img src="./assets/mock_y.png" class="md:hidden w-3/4 mx-auto">
             <div class="w-full md:w-9/12 lg:w-8/12 flex flex-col items-center md:block mt-6 ">
                 <div class="text-3xl lg:text-5xl xl:text-6xl font-bold text-center md:text-left dark:text-neutral-300">
-                    Download Tiktok Videos Without Watermarks For Free.
+                    Download Tiktok Videos ASAP Without Watermarks For Free.
                 </div>
                 <div class=" mt-12 text-lg lg:text-xl xl:text-2xl text-center md:text-left dark:text-neutral-400">
                     Enter a video link to download.
